batch-file-processing/deploy/java-batch-receiver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-batch-receiver
  labels:
    app: java-batch-receiver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-batch-receiver
  template:
    metadata:
      labels:
        app: java-batch-receiver
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "java-batch-receiver"
        dapr.io/app-port: "8084"
        dapr.io/log-level: "debug"
        dapr.io/config: "tracing"
    spec:
      containers:
      - name: java-batch-receiver
        image: dapr1batch.azurecr.io/java-batch-receiver:v1
        ports:
        - containerPort: 8084
        imagePullPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: java-batch-receiver-service
  labels:
    app: java-batch-receiver
spec:
  selector:
    app: java-batch-receiver
  ports:
    - name: java-batch-receiver
      protocol: TCP
      port: 80
      targetPort: 8084
  type: ClusterIP
